[package]
name = "ore-miner"
version = "0.1.0"
edition = "2021"
default-run = "ore-miner"

[[bin]]
name = "ore-miner"
path = "src/main.rs"

[[bin]]
name = "nonce-worker"
path = "src/nonce_worker.rs"

[profile.release]
debug = true

[dependencies]
bincode = "1.3.3"
bs58 = "0.5.1"
cached = "0.49.3"
clap = { version = "4.4.12", features = ["derive"] }
env_logger = "0.11.3"
eyre = "0.6.5"
ore = { version = "1.2.0", package = "ore-program" }
rand = "0.8.4"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sha3 = "0.10.8"
solana-client = "^1.16"
solana-sdk = "^1.16"
solana-transaction-status = "^1.16"
spl-associated-token-account = { version = "3.0.2", features = ["no-entrypoint"] }
spl-token = { version = "^4", features = ["no-entrypoint"] }
thiserror = "1.0.58"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "*"
tracing = { version = "0.1.26", features = ["log"] }
futures-util = "0.3.30"
itertools = "0.12.1"
log = "0.4.21"


[features]
benchmark = []
